[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/things/DialogueBox.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://fonts/mini-wakuwaku-maru.otf"

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 2
outline_color = Color( 0.372549, 0.403922, 0.411765, 1 )
font_data = SubResource( 1 )

[node name="DialogueBox" type="Node2D"]
z_index = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = 60.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "It's a fine day today!"
text = "It's a fine day today!"
scroll_active = false

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="TTLTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ClearTextTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
[connection signal="timeout" from="TTLTimer" to="." method="_on_TTLTimer_timeout"]
[connection signal="timeout" from="ClearTextTimer" to="." method="_on_ClearTextTimer_timeout"]
